--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hipilot",
-  "version": "1.1.1",
+  "version": "1.0.0",
   "description": "",
   "main": "./out/extension.js",
   "repository": "http://gitlab.myhexin.com/kernel/frontend/aigc/ths-vscode-plugin",
@@ -11,7 +11,7 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "build:": "node ./build/build.js"
+    "build": "node ./build/build.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,21 @@
     "pkg-dir": "^7.0.0",
     "pm2": "^5.3.0"
   },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
+    "@types/glob": "^8.1.0",
+    "@types/ini": "^1.3.31",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "20.2.5",
+    "@types/vscode": "^1.68.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
+    "@vscode/vsce": "^2.20.0",
+    "eslint": "^8.41.0",
+    "glob": "^8.1.0",
+    "typescript": "^5.2.2"
+  },
   "displayName": "hipilot",
   "engines": {
     "vscode": "^1.68.0"
@@ -41,11 +56,15 @@
       "editor/context": [
         {
           "command": "hipilot.code-explain",
-          "when": "editorHasSelection"
+          "when": "editorHasSelection",
+          "group": "hipilot",
+          "order": 1
         },
         {
-          "command": "hipilot.test-unit",
-          "when": "editorHasSelection"
+          "command": "hipilot.code-scan",
+          "when": "editorHasSelection",
+          "group": "hipilot",
+          "order": 2
         }
       ]
     },
@@ -59,8 +78,8 @@
         "title": "代码解释"
       },
       {
-        "command": "hipilot.test-unit",
-        "title": "单元测试用例生成"
+        "command": "hipilot.code-scan",
+        "title": "代码扫描"
       }
     ],
     "viewsContainers": {
@@ -81,21 +100,5 @@
         }
       ]
     }
-  },
-  "devDependencies": {
-    "@types/fs-extra": "^11.0.1",
-    "@types/glob": "^8.1.0",
-    "@types/ini": "^1.3.31",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "20.2.5",
-    "@types/vscode": "^1.68.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@vscode/test-electron": "^2.3.2",
-    "@vscode/vsce": "^2.20.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.41.0",
-    "glob": "^8.1.0",
-    "typescript": "^5.1.3"
   }
 }
