--- a/package.json
+++ b/package.json
@@ -1,104 +1,115 @@
 {
-  "name": "hipilot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./out/extension.js",
-  "repository": "http://gitlab.myhexin.com/kernel/frontend/aigc/ths-vscode-plugin",
-  "publisher": "ths",
-  "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "build": "node ./build/build.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@king-fisher/gpt-sdk": "^0.0.1-beta01",
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "ini": "^4.1.1",
-    "node-logkeep": "^1.2.8",
-    "pkg-dir": "^7.0.0",
-    "pm2": "^5.3.0"
-  },
-  "devDependencies": {
-    "@types/fs-extra": "^11.0.1",
-    "@types/glob": "^8.1.0",
-    "@types/ini": "^1.3.31",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "20.2.5",
-    "@types/vscode": "^1.68.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@vscode/test-electron": "^2.3.2",
-    "@vscode/vsce": "^2.20.0",
-    "eslint": "^8.41.0",
-    "glob": "^8.1.0",
-    "typescript": "^5.2.2"
-  },
-  "displayName": "hipilot",
-  "engines": {
-    "vscode": "^1.68.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [],
-  "contributes": {
-    "menus": {
-      "editor/context": [
-        {
-          "command": "hipilot.code-explain",
-          "when": "editorHasSelection",
-          "group": "hipilot",
-          "order": 1
-        },
-        {
-          "command": "hipilot.code-scan",
-          "when": "editorHasSelection",
-          "group": "hipilot",
-          "order": 2
-        }
-      ]
-    },
-    "commands": [
-      {
-        "command": "hipilot.detection",
-        "title": "Detection code"
-      },
-      {
-        "command": "hipilot.code-explain",
-        "title": "代码解释"
-      },
-      {
-        "command": "hipilot.code-scan",
-        "title": "代码扫描"
-      }
-    ],
-    "viewsContainers": {
-      "activitybar": [
-        {
-          "id": "chat-view",
-          "title": "Hipilot",
-          "icon": "./svg/profit.svg"
-        }
-      ]
-    },
-    "views": {
-      "chat-view": [
-        {
-          "name": "",
-          "id": "hipilot.chat-view",
-          "type": "webview"
-        }
-      ]
-    }
-  }
+	"name": "HexinCopilot",
+	"version": "1.0.0",
+	"description": "",
+	"main": "./out/extension.js",
+	"repository": "http://gitlab.myhexin.com/kernel/frontend/aigc/ths-vscode-plugin",
+	"publisher": "ths",
+	"scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"watch": "tsc -watch -p ./",
+		"pretest": "npm run compile && npm run lint",
+		"lint": "eslint src --ext ts",
+		"build": "node ./build/build.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@king-fisher/gpt-sdk": "^0.0.1-beta01",
+		"axios": "^1.4.0",
+		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"fs-extra": "^11.1.1",
+		"ini": "^4.1.1",
+		"node-logkeep": "^1.2.8",
+		"pkg-dir": "^7.0.0",
+		"pm2": "^5.3.0"
+	},
+	"devDependencies": {
+		"@types/fs-extra": "^11.0.1",
+		"@types/glob": "^8.1.0",
+		"@types/ini": "^1.3.31",
+		"@types/mocha": "^10.0.1",
+		"@types/node": "20.2.5",
+		"@types/vscode": "^1.68.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.8",
+		"@typescript-eslint/parser": "^5.59.8",
+		"@vscode/test-electron": "^2.3.2",
+		"@vscode/vsce": "^2.20.0",
+		"eslint": "^8.41.0",
+		"glob": "^8.1.0",
+		"typescript": "^5.2.2"
+	},
+	"displayName": "Hexin Copilot",
+	"engines": {
+		"vscode": "^1.68.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [],
+	"contributes": {
+		"submenus": [
+			{
+				"id": "Hexin Copilot",
+				"label": "Hexin Copilot"
+			}
+		],
+		"menus": {
+			"editor/context": [
+				{
+					"submenu": "Hexin Copilot",
+					"when": "editorHasSelection",
+					"group": "navigation@4"
+				}
+			],
+			"Hexin Copilot": [
+				{
+					"command": "HexinCopilot.code-explain",
+					"group": "HexinCopilot",
+					"order": 1
+				},
+				{
+					"command": "HexinCopilot.code-scan",
+					"group": "HexinCopilot",
+					"order": 2
+				}
+			]
+		},
+		"commands": [
+			{
+				"command": "HexinCopilot.detection",
+				"title": "Detection code"
+			},
+			{
+				"command": "HexinCopilot.code-explain",
+				"title": "代码解释"
+			},
+			{
+				"command": "HexinCopilot.code-scan",
+				"title": "代码扫描"
+			}
+		],
+		"viewsContainers": {
+			"activitybar": [
+				{
+					"id": "chat-view",
+					"title": "HexinCopilot",
+					"icon": "./svg/profit.svg"
+				}
+			]
+		},
+		"views": {
+			"chat-view": [
+				{
+					"name": "",
+					"id": "HexinCopilot.chat-view",
+					"type": "webview"
+				}
+			]
+		}
+	}
 }
